# PITkit

./: Announcement.md  Axioms.md  AxiomsGemini.md  Cosmological_Appendix.md  History.md  Links.md  Loom.md  Math.md  PIT.md  PIT_Dark_Matter_Solution.md  PITcompare.md  PITcomplete.md  PITdark.md  ProcessFractal.md  README.md  pit.loom.md
01_First_Principles/: Appendix_Z.md
02_Principle_Of_Dynamic_Law/: 02_Theoretical_Framework.md  03_Derivation_of_BTFR_Scaling.md  04_Electromagnetic_Unification.md  05_Observational_Predictions.md  Appendix_A_Field_Equations.md  Appendix_C_Numerical_Methods.md  Appendix_D_Testable_Predictions.md  Appendix_E_Validation.md
03_First_Results/: 01_Compute_Only.md
04_Qubits/: 01_QubitsAreParticipants.md  06_Computational_Implications.md
Arxiv/: Makefile  main.tex  references.bib
Connections/: RecursiveReasoningTinyNetworks.md  YaleBrain.md
Demonstrations/: Convo.md
Explanations/: AxiomaticSequence.md  LOF.md
Implications/: HumanityProblems.md  WhyCanLLMsThink.md
Incoming/: 05_Missing_Physics_Recipe.md  Animal_Communication.md  em_lagrangian.md  em_lagrangian0.md  photon_emergence.md
Loom/: Loom.md  LoomTemplate.md
Oscillators/: coupled-oscillators.cabal  stack.yaml
Oscillators/app/: Main.hs
paper/: 00_Abstract.md  01_Introduction.md  02_Theoretical_Framework.md  03_Derivation_of_BTFR_Scaling.md  04_Electromagnetic_Unification.md  06_Cosmological_Implications.md  07_Discussion_And_Outlook.md
pit_fitter/: README.md  global_fitter.py  load_galaxy.py  single_galaxy_filter.py
seeds/: ClaudeSeed.rtf
(+52 files in other folders)
