cabal-version:       3.0
name:                coupled-oscillators
version:             0.1.0.0
license:             NONE
build-type:          Simple

executable coupled-oscillators
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >=4.14 && <5
    , random
